--- a/services.html
+++ b/services.html
@@ -22,12 +22,48 @@
 
             </nav>
 
-            <main>
+            <main class="service-class">
                 <h3> This page provides a detail information on services we have</h3>
                 <p> <strong>GebereNet</strong> is an emerging platform designed to support Ethiopia’s agricultural community. 
                 It connects farmers, organizations, and businesses working in the agriculture sector by offering space to collaborate, share knowledge, and grow together. 
                 The platform highlights the importance of partnerships across all levels—local growers to international stakeholders.
                 </p>
+
+                <p>
+                <h3>🌱 Knowledge & Training</h3>
+                    <ul>
+                        <li>Farmer tutorials (soil health, market access)</li>
+                        <li>Expert-led webinars</li>
+                        <li>Open-access research hub</li>
+                    </ul>
+                <h3>🤝 Collaboration & Community</h3>
+                    <ul>
+                        <li>Stakeholder matchmaking</li>
+                        <li>Discussion forums</li>
+                        <li>Local/regional event board</li>
+                    </ul>
+                <h3>💼 Marketplace & Jobs</h3>
+                    <ul>
+                        <li>Agricultural e-commerce</li>
+                        <li>Service provider listings</li>
+                        <li>Agribusiness job portal</li>
+                    </ul>
+                <h3>Tools & Data Services</h3>
+                    <ul>
+                        <li>Weather and seasonal dashboards</li>
+                        <li>Land productivity mapping</li>
+                        <li>Financial planning tools</li>
+                    </ul>
+                <h3>🏛️ Policy & Advocacy</h3>
+                    <ul>
+                        <li>Policy feedback channel</li>
+                        <li>Grant/funding alerts</li>
+                        <li>Innovation success stories</li>
+                    </ul>
+                GebereNet envisions a thriving agricultural ecosystem in Ethiopia—one rooted in knowledge, trust, and inclusive opportunity. By offering essential tools, community connections, and direct access to markets and policies, the platform empowers every participant to contribute, collaborate, and grow. Whether you're a smallholder farmer or an international stakeholder, GebereNet is more than a service hub—it's the heartbeat of Ethiopia’s agricultural transformation. Let’s build it together.
+                </p>
+
+
             </main>
 
         </body>
