--- a/contactUS.html
+++ b/contactUS.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="contactUS.html">Contacts</a></li>
+                    <li><a href="contactUS.html">Contacts US</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
 
@@ -35,4 +35,17 @@
             </main>
         </body>
 
-    </html>
+        <footer> <!--the footer that we always ended navigating a web page--->
+            <h3>Contact Us:</h3>
+            <ul>
+                <li>Location: XXXX</li>
+                <li>Phone: 1111111</li>
+                <li>Email:info@geberenet.com</li>
+                <li>Facbook: /geberenet</li>
+                
+                 <p> 🤣🤣🤣©2025 GebereNet. All rights reserved.</p>
+            </ul>
+
+        </footer>
+
+    </html> <!--closing the web page--->
