--- a/register.html
+++ b/register.html
@@ -31,49 +31,62 @@
             </p>
 
             <form action="/submit-Form" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <div class="RegisterForm">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
 
 
-                <label for="name">Gender:</label>
-                <input type="radio" id="name" name="Gender">Male
-                <input type="radio" id="name" name="Gender">Female
-                <input type="radio" id="name" name="Gender">None
+                    <label for="name">Gender:</label>
+                    <input type="radio" id="name" name="Gender">Male
+                    <input type="radio" id="name" name="Gender">Female
+                    <input type="radio" id="name" name="Gender">None
 
-                <label for="name">Education Level:</label>
-                <select name="Education Level" id="name">
-                    <option>--select--</option>
-                    <option>ED1</option>
-                    <option>ED2</option>
-                    <option>ED3</option>
-                    <option>ED4</option>
-                </select>
+                    <label for="name">Education Level:</label>
+                    <select name="Education Level" id="name">
+                        <option>--select--</option>
+                        <option>ED1</option>
+                        <option>ED2</option>
+                        <option>ED3</option>
+                        <option>ED4</option>
+                    </select>
 
-                <label for="name">Interests:</label>
-                <input type="checkbox" id="Interest1" name="Interest1">Interest1
-                <input type="checkbox" id="Interest2" name="Interest2">Interest2
-                <input type="checkbox" id="Interest3" name="Interest3">Interest3
+                    <label for="name">Interests:</label>
+                    <input type="checkbox" id="Interest1" name="Interest1">Interest1
+                    <input type="checkbox" id="Interest2" name="Interest2">Interest2
+                    <input type="checkbox" id="Interest3" name="Interest3">Interest3
 
-                <label for="phone">Phone:</label>
-                <input type="number" id="phone" name="phone">
+                    <label for="phone">Phone:</label>
+                    <input type="number" id="phone" name="phone">
 
-                <label for="Date">Date:</label>
-                <input type="date" id="date" name="date">
+                    <label for="Date">Date:</label>
+                    <input type="date" id="date" name="date">
 
-                <label for="email"> Email:</label>
-                <input type="email" id="email" name="email">
+                    <label for="email"> Email:</label>
+                    <input type="email" id="email" name="email">
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password">
 
-                <label for="Photo">Upload your ID:</label>
-                <input type="file" id="photo" name="Photo">
+                    <label for="Photo">Upload your ID:</label>
+                    <input type="file" id="photo" name="Photo">
 
-                <button type="submit"> Register</button>
-
+                    <button type="submit"> Register</button>
+                </div>
             </form>
 
         </body>
 
+        <footer> <!--the footer that we always ended navigating a web page--->
+            <h3>Contact Us:</h3>
+            <ul>
+                <li>Location: XXXX</li>
+                <li>Phone: 1111111</li>
+                <li>Email:info@geberenet.com</li>
+                <li>Facbook: /geberenet</li>
+                
+                 <p> 🤣🤣🤣©2025 GebereNet. All rights reserved.</p>
+            </ul>
 
-    </html>
+        </footer>
+
+    </html> <!--closing the web page--->
