--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
             </nav>
             <main>
-                <h3> Everything we aspire do</h3>
+                <h3> Everything we aspire to do</h3>
                 <p> 
                 <strong>GebereNet</strong> is an emerging platform designed to support Ethiopia’s agricultural community. 
                 It connects farmers, organizations, and businesses working in the agriculture sector by offering space to collaborate, share knowledge, and grow together. 
