revised hackathon fiels

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <body>
             <h1>✨ Wellcome to GebereNet! 🌾 ገበሬኔት 🌱</h1> <!--the first landing page (header 1 for greeting--->
-            
+            <h3 id="motto"> Connect and Win Together!</h3>
             <nav class="navbar"> <!--the menubar organizing everything here Home, about, services, contacs, and registration pages--->
                 <ul>
                     <li><a href="index.html">Home</a></li>
